--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,12 +15,44 @@
             "args": [
                 "--nnodes", "1",
                 "--nproc_per_node", "1",
-                "${file}"
+                "${file}",
+                "--model_name_or_path" ,"BAAI/bge-large-en-v1.5",
+                "--train_data", 
+                "./examples/finetune/embedder/example_data/retrieval",
+                "./examples/finetune/embedder/example_data/sts",
+                "./examples/finetune/embedder/example_data/classification-no_in_batch_neg",
+                "./examples/finetune/embedder/example_data/clustering-no_in_batch_neg",
+                "--overwrite_output_dir",
+                "--train_group_size","8",
+                "--query_max_len","512",
+                "--passage_max_len","512",
+                "--pad_to_multiple_of","8",
+                "--query_instruction_for_retrieval", "Represent this sentence for searching relevant passages:",
+                "--query_instruction_format","{}{}",
+                "--knowledge_distillation","false",
+                "--output_dir","./self/checkpoint_model_encoder_only_base_bge-large-en-v1.5",
+                "--learning_rate","1e-5",
+                "--fp16",
+                "--num_train_epochs", "4",
+                "--per_device_train_batch_size","2",
+                "--dataloader_drop_last","true",
+                "--warmup_ratio","0.1",
+                "--gradient_checkpointing",
+                "--deepspeed","./self/base_encode_emb/ds_stage0.json",
+                "--logging_steps","1",
+                "--save_steps","1000",
+                "--negatives_cross_device",
+                "--temperature","0.02",
+                "--sentence_pooling_method", "cls",
+                "--normalize_embeddings","true",
+                "--kd_loss_type", "kl_div"
             ],
             "cwd": "${workspaceFolder}",
             "env": {
                 "PYTHONPATH": "${workspaceFolder}",
-                "PYTORCH_ENABLE_MPS_FALLBACK": "1"
+                "WANDB_MODE": "disabled",
+                "PYDEVD_DISABLE_FILE_VALIDATION":"1",
+                "HF_ENDPOINT":"https://hf-mirror.com"
             }
         }
     ]
